--- a/hyperlink/contact/contact.html
+++ b/hyperlink/contact/contact.html
@@ -11,7 +11,7 @@
 
     <a href="../index.html">Beranda</a> |
     <a href="../profile.html">Profile</a> |
-    <a href="contact/contact.html">Contact</a> 
+    <a href="contact.html">Contact</a> 
 
     <hr>
 
