--- a/hyperlink/index.html
+++ b/hyperlink/index.html
@@ -10,8 +10,8 @@
     <h1>Selamat Datang</h1>
 
     <a href="index.html">Beranda</a> |
-    <a href="#">Profile</a> |
-    <a href="#">Contact</a>  
+    <a href="profile.html">Profile</a> |
+    <a href="contact/contact.html">Contact</a>  
 
     <hr>
 
