--- a/hyperlink/contact/contact.html
+++ b/hyperlink/contact/contact.html
@@ -16,7 +16,12 @@
     <hr>
 
     <p>you can contact me via Instagram : @suhendroady</p>
-    <p>Or you can add me in facebook : <a href="http://www.facebook.com/suhendroady">suhendro_ady</a> </p>
+    <p>Or you can add me in 
+        <ul>
+            <li>facebook  : <a href="http://www.facebook.com/suhendroady" target="_blank"><img src="../img/facebook-logo.png" width="16"> Suhendro Ady</a></li>
+            <li>Instagram : <a href="https://www.instagram.com/suhendro_ady/" target="_blank"><img src="../img/instagram-icon.png" width="16"> @suhendro_ady</a></li>
+        </ul> 
+    </p>
 
     <hr>
 
